Issue #420. an attempt to fix AppVeyor script.